test: controllers methods overwrite for changes, change contents in methods; change: rename controller, add lombok annotations